# nixpkgsHome

./: README.md  cbc.nix  config.nix  nixpkgs  nlopt.nix  osi.nix  z3.nix
coin-or/: bonmin.nix  cgl.nix  clp.nix  coinUtils.nix  couenne.nix  ipopt.nix
hs/: Adaptive.nix  CTRex.nix  HList.nix  HListPP.nix  HOpenCV.nix  KdTree.nix  OptDir.nix  OrPatterns.nix  PartialTypeSignatures.nix  RlangQQ.nix  algebra.nix  applicativeQuoters.nix  dataInterval.nix  doctestCore.nix  doctestWrapper.nix  finiteField.nix  gtk3.nix  gtksourceview3.nix  haskellSrcExts115.nix  heaps.nix  here.nix  hlint_compat.diff  hmatrixLabeled.nix  hmatrixSyntax.nix  hothasktags.nix  ihaskell.nix  intern.nix  ipoptHs.nix  lattices.nix  lmqq.nix  logicTPTP.nix  magic.nix  parseDimacs.nix  primes.nix  queue.nix  representableFunctors.nix  representableTries.nix  setlocale.nix  sign.nix  standaloneHaddock.nix  (+11 more)
hs/ihaskell/: ghc-parser.nix  ihaskell-aeson.nix  ihaskell-basic.nix  ihaskell-blaze.nix  ihaskell-charts.nix  ihaskell-diagrams.nix  ihaskell-hatex.nix  ihaskell-juicypixels.nix  ihaskell-magic.nix  ihaskell-parsec.nix  ihaskell-rlangqq.nix  ihaskell-widgets.nix  ihaskell.nix
hs/ihaskell/ihaskellAll/: ihaskellAll.cabal  ihaskellAll.nix
