name: ihaskellAll
version: 0
build-type: Simple
cabal-version: >= 1.2
license: BSD3

executable ihaskellAll
  build-depends: base,
                 ihaskell-aeson,
                 ihaskell-basic,
                 ihaskell-blaze,
                 ihaskell-charts,
                 ihaskell-diagrams,
                 ihaskell-hatex,
                 ihaskell-juicypixels,
                 ihaskell-magic,
                 ihaskell-parsec,
                 ihaskell-rlangqq,
                 ihaskell-widgets

  main-is: doNothing.hs
